--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </div>
 
                         <div class="col md-12 mb-3">
-                            <img src="img/marketing.jpg" alt="imagem" style="width: 75%; height: 80%;">
+                            <img src="marketing.jpg" alt="imagem" style="width: 75%; height: 80%;">
                         </div>
 
                         <div class="col-md-12 mb-4 text-center">
